--- a/styles/header.scss
+++ b/styles/header.scss
@@ -124,7 +124,7 @@ $font-light-grey: #9b9b9b;
     padding: 0;
     height: 52px;
     width: 52px;
-    background-image: url('/assets/icons/menu-icon.svg');
+    background-image: url('../assets/icons/menu-icon.svg');
     background-position: 50% 50%;
     margin-left: 20px;
   }
