--- a/styles/gallery-page.scss
+++ b/styles/gallery-page.scss
@@ -4,6 +4,24 @@ $font-grey: #4a4a4a;
 $font-light-grey: #9b9b9b;
 $pink: #e96099;
 
+.gallery-header-container {
+  margin: 0 100px;
+  display: flex;
+  justify-content: space-between;
+
+  @include breakpoints(to1599) {
+    margin: 0 40px;
+  }
+  @include breakpoints(to1199) {
+    margin: 0 20px;
+  }
+
+  @include breakpoints(to767) {
+    flex-wrap: wrap;
+    margin: 0 10px;
+  }
+}
+
 .gallery-container {
   min-height: calc(100vh - 80px);
   height: calc(100vh - 80px);
@@ -13,16 +31,23 @@ $pink: #e96099;
   justify-content: space-between;
   align-items: stretch;
   background-image: radial-gradient(circle at 50% 50%, #ffffff, #f5f5f5);
-
+  padding-right: 100px; 
+  
   @include breakpoints(to1599) {
+    padding-right: 40px; 
     margin: 0;
     max-width: inherit;
+  }
+  
+  @include breakpoints(to1199) {
+    padding-right: 20px; 
   }
 
   @include breakpoints(to767) {
     height: initial;
     flex-direction: column;
     justify-content: flex-start;
+    padding-right: 0;
   }
 }
 
@@ -49,7 +74,8 @@ $pink: #e96099;
   padding: 20px 10px 0;
   background-color: #fff;
   overflow: hidden;
-  max-width: 500px;
+  max-width: 400px;
+  padding-left: 100px;
 
   &__title {
     color: $pink;
@@ -79,10 +105,6 @@ $pink: #e96099;
     color: $font-grey;
   }
 
-  &__logos {
-    margin: 0 20px;
-  }
-
   &__projects {
     margin-bottom: 30px;
   }
@@ -102,12 +124,14 @@ $pink: #e96099;
 
   @include breakpoints(to1599) {
     padding-top: 10px;
+    padding-left: 40px;
     &__text {
       font-size: 14px;
     }
   }
 
   @include breakpoints(to1199) {
+    padding-left: 20px;
     &__text {
       font-size: 12px;
     }
@@ -125,6 +149,7 @@ $pink: #e96099;
     &__contact-btn {
       margin-left: auto;
       margin-right: auto;
+      margin-top: initial;
     }
 
     &__collapse-container {
@@ -163,6 +188,10 @@ $pink: #e96099;
 .projects {
   &__title {
     color: $font-grey;
+  }
+
+  &__logos {
+    margin-bottom: 50px;
   }
 
   &__slider {
@@ -205,9 +234,27 @@ $pink: #e96099;
 
   @include breakpoints(768to1199) {
     &__project &__tooltip {
-      padding: 10px 2px;
-      font-size: 11px;
+      padding: 10px 5px;
+      font-size: 12px;
       max-width: 50px;
+    }
+  }
+
+  @include breakpoints(to1599) {
+    &__logos {
+      margin-bottom: 30px;
+    }
+  }
+  @include breakpoints(to767) {
+    .slick-track {
+      margin-bottom: initial;
+    }
+    .slick-next {
+      top: 50%;
+    }
+
+    &__project:hover &__tooltip {
+      display: none;
     }
   }
 }
@@ -216,6 +263,7 @@ $pink: #e96099;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+
   &__img {
     flex-basis: 24%;
     display: flex;
@@ -277,17 +325,18 @@ $pink: #e96099;
 }
 
 .models {
-  padding-top: 10px;
-  overflow-y: scroll;
-  max-height: calc(100vh - 80px);
-  height: calc(100vh - 80px);
-  width: 150px;
-  box-sizing: border-box;
-  display: flex !important;
+  display: flex;
   flex-direction: column;
   justify-content: center;
-  &::-webkit-scrollbar { 
-    display: none; 
+  &__container {
+    width: 150px;
+    box-sizing: border-box;
+    overflow-y: scroll;
+    max-height: calc(100vh - 186px);
+    height: calc(100vh - 186px);
+    &::-webkit-scrollbar { 
+      display: none; 
+    }
   }
   &__model {
     width: 150px;
@@ -301,36 +350,38 @@ $pink: #e96099;
     box-sizing: border-box;
   }
   &__img {
-    width: 100%;
-    height: auto;
+    height: 100%;
+    width: auto;
     vertical-align: middle;
   }
 
-  .slick-next {
-    display: block;
-    margin: 1px auto;
+  &__scroll-down {
+    display: flex;
+    margin: 10px auto;
     svg {
       transform: rotate(90deg);
-      height: 30px;
+      height: 33px;
     }
   }
-  .slick-prev {
-    @extend .slick-next;
+  &__scroll-up {
+    @extend .models__scroll-down;
     svg {
       transform: rotate(-90deg);
     }
   }
 
   @include breakpoints(to1599) {
-    width: 100px;
     &__model {
       width: 100px;
       height: 100px;
       max-height: 100px;
     }
+    &__container {
+      width: 100px;
+    }
   }
   @include breakpoints(to767) {
-    display: none !important;
+    display: none;
   }
 }
 
@@ -418,7 +469,7 @@ $pink: #e96099;
   position: absolute;
   z-index: 1;
   top: 80px;
-  bottom: 0;
+  height: calc(100vh - 80px);
   left: 0;
   right: 0;
   background-image: radial-gradient(circle at 50% 50%, #272727, #000000);
@@ -465,6 +516,7 @@ $pink: #e96099;
     top: 40px;
     right: 40px;
     display: flex;
+    z-index: 10;
     &:hover {
       background-color: #565656;
     }
