--- a/styles/main.scss
+++ b/styles/main.scss
@@ -18,6 +18,9 @@ body {
   position: relative;
 }
 
+:focus {
+  outline: 1px solid rgb(227, 228, 228) !important;
+}
 button {
   cursor: pointer;
   border: none;
