--- a/styles/mobile-menu.scss
+++ b/styles/mobile-menu.scss
@@ -7,16 +7,17 @@ $font-light-grey: #9b9b9b;
 .mobile-menu {
   position: absolute;
   top: 0;
-  bottom: 0;
+  min-height: 100vh;
   left: 0;
   right: 0;
+  bottom: 0;
   background-color: #182428;
   z-index: 20;
   display: none;
   flex-direction: column;
   align-items: center;
   padding: 90px 0 40px;
-  
+  box-sizing: border-box;
   transition: opacity .3s ease-out;
   opacity: 0;
 
