--- a/styles/main.scss
+++ b/styles/main.scss
@@ -19,7 +19,7 @@ body {
 }
 
 :focus {
-  outline: 1px solid rgb(227, 228, 228) !important;
+  outline: 1px solid rgb(227, 228, 228);
 }
 button {
   cursor: pointer;
