--- a/styles/gallery-page.scss
+++ b/styles/gallery-page.scss
@@ -31,16 +31,10 @@ $pink: #e96099;
   justify-content: space-between;
   align-items: stretch;
   background-image: radial-gradient(circle at 50% 50%, #ffffff, #f5f5f5);
-  padding-right: 100px; 
   
   @include breakpoints(to1599) {
-    padding-right: 40px; 
     margin: 0;
     max-width: inherit;
-  }
-  
-  @include breakpoints(to1199) {
-    padding-right: 20px; 
   }
 
   @include breakpoints(to767) {
@@ -71,11 +65,13 @@ $pink: #e96099;
 .desc {
   flex-basis: 25%;
   max-width: 25%;
-  padding: 20px 10px 0;
+  padding-top: 20px;
+  padding-bottom: 10px;
   background-color: #fff;
   overflow: hidden;
   max-width: 400px;
   padding-left: 100px;
+  padding-right: 40px;
 
   &__title {
     color: $pink;
@@ -124,6 +120,7 @@ $pink: #e96099;
   @include breakpoints(to1599) {
     padding-top: 10px;
     padding-left: 40px;
+    padding-right: 20px;
     &__text {
       font-size: 14px;
     }
@@ -296,6 +293,7 @@ $pink: #e96099;
   flex-basis: 65%;
   flex-grow: 0;
   padding-top: 40px;
+  padding-bottom: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -308,31 +306,40 @@ $pink: #e96099;
   img {
     height: calc(100% - 150px);
     max-height: calc(100% - 150px);
-    width: 100%;
+    max-width: 100%;
     object-fit: contain;
   }
 
   @include breakpoints(to1599) {
     padding-top: 10px;
+    padding-bottom: 10px;
   }
   @include breakpoints(to767) {
     display: none;
   }
 }
-
+@-moz-document url-prefix() {
+  .models__container {
+    margin-right: -16px;
+  }
+}
 .models {
   display: flex;
   flex-direction: column;
   justify-content: center;
+
   &__container {
-    width: 150px;
     box-sizing: border-box;
     overflow-y: scroll;
     max-height: calc(100vh - 186px);
     height: calc(100vh - 186px);
+    scroll-snap-points-y: repeat(160px);
+    scroll-snap-type: mandatory;
+    scroll-snap-destination: 100% 0%;
     &::-webkit-scrollbar { 
-      display: none; 
+      display: none;  
     }
+    -ms-overflow-style: none;
   }
   &__model {
     width: 150px;
@@ -344,6 +351,12 @@ $pink: #e96099;
     cursor: pointer;
     overflow: hidden;
     box-sizing: border-box;
+    margin: 0 1px;
+    margin-bottom: 10px;
+    opacity: .5;
+  }
+  &__model.isSelected {
+    opacity: 1;
   }
   &__img {
     height: 100%;
@@ -368,12 +381,13 @@ $pink: #e96099;
 
   @include breakpoints(to1599) {
     &__model {
-      width: 100px;
-      height: 100px;
-      max-height: 100px;
+      width: 95px;
+      height: 95px;
+      max-height: 95px;
+      margin-bottom: 5px;
     }
     &__container {
-      width: 100px;
+      scroll-snap-points-y: repeat(105px);
     }
   }
   @include breakpoints(to767) {
