--- a/styles/header.scss
+++ b/styles/header.scss
@@ -90,9 +90,10 @@ $font-light-grey: #9b9b9b;
   &__logo {
     align-self: stretch;
     display: flex;
+    align-items: center;
+    height: 80px;
     img {
-      width: 100%;
-      height: auto;
+      height: 60px;
       vertical-align: middle;
     }
   }
@@ -124,9 +125,10 @@ $font-light-grey: #9b9b9b;
     padding: 0;
     height: 52px;
     width: 52px;
-    background-image: url('../../assets/icons/menu-icon.svg');
-    background-position: 50% 50%;
     margin-left: 20px;
+    &:hover {
+      background-color: #f5f5f5;
+    }
   }
   
   &__nav {
