--- a/styles/page2/desc-section.scss
+++ b/styles/page2/desc-section.scss
@@ -1,6 +1,6 @@
 
 .desc-section {
-  background-color: #FFFFFF;
+  background-color: #F6F7F9;
   padding: 60px 0;
 
   &__how-it-works-img {
@@ -11,6 +11,7 @@
   &__texts {
     margin: 20px 0 40px;
   }
+
   &__text {
     margin-bottom: 26px;
   }
