--- a/styles/page2/top-section.scss
+++ b/styles/page2/top-section.scss
@@ -4,6 +4,7 @@
   background-repeat: no-repeat;
   background-size: 100% calc(100% - 247px);
   background-position: top;
+  background-color: #F6F7F9;
   padding-top: 30px;
 
   &__container {
