--- a/styles/page2/why-section.scss
+++ b/styles/page2/why-section.scss
@@ -1,6 +1,6 @@
 
 .why-section {
-  background-color: #FFFFFF;
+  background-color: #F6F7F9;
   padding: 60px 0;
   
   &__text {
@@ -46,7 +46,12 @@
 .benefit {
   text-align: center;
   padding: 40px 25px;
-
+  background-color: #FFFFFF;
+  border-radius: 4px;
+  margin-bottom: 20px;
+  &:last-child {
+    margin-bottom: 0;
+  }
   &__icon {
     width: 30px;
     height: 31px;
@@ -88,5 +93,9 @@
     font-size: 16px;
     line-height: 28px;
     margin: 0;
+  }
+
+  @media only screen and (min-width: 768px) {
+    margin-bottom: 0;
   }
 }
