--- a/styles/page1/desc-section.scss
+++ b/styles/page1/desc-section.scss
@@ -4,8 +4,11 @@
   padding: 60px 0;
 
   &__how-it-works-img {
-    max-width: 100%;
-    margin: 40px 0 60px;
+    margin: 40px auto 60px;
+    svg {
+      width: 294px;
+      height: 121px;
+    }
   }
 
   &__texts {
@@ -15,10 +18,23 @@
     margin-bottom: 26px;
   }
 
+  @media only screen and (min-width: 480px) {
+    &__how-it-works-img {
+      svg {
+        width: 450px;
+        height: 186px;
+      }
+    }
+  }
   @media only screen and (min-width: 768px) {
     padding: 80px 0;
     &__how-it-works-img {
       margin-bottom: 84px;
+      max-width: 675px;
+      svg {
+        width: 675px;
+        height: 279px;
+      }
     }
 
     &__texts {
