--- a/styles/page2/desc-section.scss
+++ b/styles/page2/desc-section.scss
@@ -4,10 +4,12 @@
   padding: 60px 0;
 
   &__how-it-works-img {
-    max-width: 100%;
-    margin: 40px 0 60px;
+    margin: 40px auto 60px;
+    svg {
+      width: 294px;
+      height: 121px;
+    }
   }
-
   &__texts {
     margin: 20px 0 40px;
   }
@@ -16,11 +18,22 @@
     margin-bottom: 26px;
   }
 
-
+  @media only screen and (min-width: 480px) {
+    &__how-it-works-img {
+      svg {
+        width: 450px;
+        height: 186px;
+      }
+    }
+  }
   @media only screen and (min-width: 768px) {
-    padding: 80px 0;
     &__how-it-works-img {
       margin-bottom: 84px;
+      max-width: 675px;
+      svg {
+        width: 675px;
+        height: 279px;
+      }
     }
 
     &__texts {
