--- a/styles/page2/top-section.scss
+++ b/styles/page2/top-section.scss
@@ -33,9 +33,13 @@
     margin-bottom: 30px;
   }
 
-  &__pie-chart {
-    width: calc(100% + 40px);
+  &__pie-chart-small {
+    width: 300px;
+    height: 310px;
     margin: 0 -20px;
+  }
+  &__pie-chart {
+    display: none;
   }
 
   &__form {
@@ -91,13 +95,25 @@
       display: none;
     }
     &__pie-chart {
-      width: 100%;
+      display: block;
       margin: 0;
       margin-top: -45px;
+      width: 350px;
+      height: 319px;
+    }
+    &__pie-chart-small {
+      display: none;
     }
     &__form {
       align-self: center;
       margin: initial;
+    }
+  }
+
+  @media only screen and (min-width: 1200px) {
+    &__pie-chart {
+      width: 565px;
+      height: 516px;
     }
   }
 
